--- a/breath5_starter/pubspec.yaml
+++ b/breath5_starter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   rxdart: ^0.28.0
   audioplayers: ^6.5.0
   flutter_vibrate: ^1.3.0
+  simple_animations: ^5.2.0
 
 dev_dependencies:
   flutter_test:
