--- a/breath5_starter/pubspec.yaml
+++ b/breath5_starter/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   audioplayers: ^6.5.0
   flutter_vibrate: ^1.3.0
   simple_animations: ^5.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/audio/
+    - assets/patterns/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
