--- a/breath5_starter/pubspec.yaml
+++ b/breath5_starter/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   assets:
     - assets/audio/
     - assets/patterns/
+    - assets/splash/splash.png
+    - assets/icons/icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
